<resources>
    <string name="app_name">AndroidCleanArchMVVM_Gson</string>
    <string name="loading">Loading…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
            <string name="create_your_avercare_account">Create your AverCare account</string>
            <string name="sign_up_text">Sign up to unlock tailored wellness insights.</string>
            <string name="email">Email</string>
            <string name="password">Password</string>
            <string name="sign_up">Sign Up</string>
            <string name="or">or</string>
            <string name="sign_up_with_google">Sign up with Google</string>
            <string name="already_have_account">Already have an account? Log in</string>
            <string name="login">Log in</string>
            <string name="welcome_back">Welcome back</string>
            <string name="signing_to_your_account">Sign in to your AverCare account.</string>
            <string name="log_in">Log In</string>
            <string name="dont_have_account">Don’t have an account? Sign up</string>
            <string name="signup">Sign up</string>
            <string name="forgot_password">Forgot Password?</string>
            <string name="terms_service">By continuing, you agree to AverCare\'s Terms of Service and Privacy Policy</string>
            <string name="terms_of_service">Terms of Service</string>
            <string name="privacy_policy">Privacy Policy</string>
            <string name="submit">Submit</string>
            <string name="let_start">Let\'s Start</string>
            <string name="enter_email_address">Enter Email Address\n</string>

            <string name="please_enter_email_address">Please enter email address</string>
            <string name="please_enter_valid_email_address">Please enter valid email address</string>

            <string name="please_enter_password">Please enter password</string>
            <string name="please_confirm_enter_password">Please enter confirm password</string>
            <string name="password_is_required">Password is required</string>
            <string name="email_is_required">Email is required</string>
            <string name="please_enter_a_valid_email">Please enter a valid email</string>
            <string name="confirm_password_is_required">Confirm password is required</string>
            <string name="please_agree_terms_of_service">Please agree to our terms of condition and privacy policy.</string>
            <string name="please_enter_valid_password">Password must be 8+ characters with letters, numbers, and symbols.</string>
            <string name="create_confirm_not_match">Confirm password does\'t match.</string>
            <string name="confirm_password">Confirm Password</string>
            <string name="forgot_your_pass">Forgot your password?</string>
            <string name="password_not_match">Password does not match</string>
            <string name="enter_your_mail">Enter your email</string>
            <string name="reset_your_password">Reset your password?</string>
            <string name="create_new_password">Create new password</string>
            <string name="new_password">New Password</string>
            <string name="verify_your_email">Verify your Email</string>
            <string name="enter_6_digit_code">Enter the 6-digit code we sent to your email for verification. Check your inbox and spam folder.</string>
            <string name="verify">Verify</string>
            <string name="didn_t_get_the_code_resend">Didn\'t get the code? Resend in 30 s</string>
            <string name="your_info_is_encrypted_and_never_shared">Your info is encrypted and never shared.</string>
            <string name="trouble_contact_support_in_the_app_menu">Trouble? Contact support in the app menu</string>
            <string name="empty_otp">Please enter OTP.</string>
            <string name="invalid_otp">Please enter 6 digit OTP.</string>
            <string name="resend">Resend in 30 s</string>
            <string name="verification">Verification</string>
            <string name="for_your_security_choose">For your security, choose a verification method. This helps keep your account safe.</string>
            <string name="text_message">Text Message</string>
            <string name="send_a_code_to_your_phone">Send a code to your phone</string>
            <string name="send_a_code_to_your_email">Send a code to your email</string>
            <string name="google_authenticator">Google Authenticator</string>
            <string name="use_your_google_authenticator_app">Use your Google Authenticator app</string>
            <string name="try_another_mfa_method">Try Another MFA Verification Method</string>
            <string name="mfa_verification">MFA Verification</string>
            <string name="terms_and_service">I agree to the Terms of Service and Privacy Policy.</string>
            <string name="consent_health_info">I consent to AverCare processing my health-related information to deliver and enhance the services.</string>
            <string name="consent_health_info_sharing">I consent to AverCare sharing my health-related information with [Providers/Partners] for care coordination and service delivery.</string>
            <string name="consent_privacy_telehealth">I acknowledge receiving the Notice of Privacy Practices (HIPAA) and consent to receive care via telehealth, including associated limitations and privacy implications.</string>
            <string name="secure_account_with_mfa_method">Secure Your Account With MFA Verification</string>
</resources>
