<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingVertical="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_15sdp">

            <ScrollView
                android:id="@+id/scroll_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_already_have_account">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_25sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/app_rounded_black_bg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_logo"
                        android:layout_width="@dimen/_70sdp"
                        android:src="@drawable/ic_logo"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_main_heading"
                        style="@style/customTvSemiBold"
                        android:textSize="@dimen/_16ssp"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintTop_toBottomOf="@+id/img_logo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/create_your_avercare_account"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sub_heading"
                        style="@style/customTextView"
                        android:paddingHorizontal="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_main_heading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/sign_up_text"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_email"
                        style="@style/customTvSemiBold"
                        android:textColor="@color/secondaryTextColor"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_sub_heading"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/email"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        style="@style/customEt"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        app:layout_constraintTop_toBottomOf="@+id/tv_email"
                        app:layout_constraintStart_toStartOf="@id/tv_email"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_password"
                        style="@style/customTvSemiBold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/secondaryTextColor"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintTop_toBottomOf="@+id/et_email"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/password"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        android:text="@string/password"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/password_selector"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:hintTextColor="@color/primaryEtTextColor"
                        app:helperTextTextColor="@color/primaryEtTextColor"
                        app:layout_constraintTop_toBottomOf="@+id/tv_password"
                        app:layout_constraintStart_toStartOf="@id/tv_password"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/customTextInputEt"
                            android:hint="@string/password"
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/inter_medium"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatCheckedTextView
                        android:id="@+id/checkedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_service"
                        android:textColor="@color/primaryColor"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_layout"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_btn_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@drawable/common_btn_bg"
                        app:layout_constraintTop_toBottomOf="@+id/checkedTextView">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/btn_submit"
                            style="@style/customButtonWithArrow"
                            android:text="@string/sign_up"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/view_sep_before"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/borderColor"
                        app:layout_constraintEnd_toStartOf="@+id/tv_or"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginVertical="@dimen/_25sdp"
                        app:layout_constraintTop_toBottomOf="@+id/cl_btn_layout"/>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_or"
                        style="@style/customTextView"
                        android:textSize="@dimen/_9sdp"
                        android:paddingHorizontal="@dimen/_15sdp"
                        app:layout_constraintEnd_toStartOf="@+id/view_sep_after"
                        app:layout_constraintStart_toEndOf="@+id/view_sep_before"
                        app:layout_constraintTop_toTopOf="@id/view_sep_before"
                        app:layout_constraintBottom_toBottomOf="@+id/view_sep_before"
                        android:text="@string/or"/>

                    <View
                        android:id="@+id/view_sep_after"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/borderColor"
                        app:layout_constraintStart_toEndOf="@+id/tv_or"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginVertical="@dimen/_25sdp"
                        app:layout_constraintTop_toBottomOf="@+id/cl_btn_layout"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/common_btn_black_bg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_or">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/customBlackButton"
                            android:drawableStart="@drawable/ic_google"
                            android:drawablePadding="@dimen/_8sdp"
                            android:text="@string/sign_up_with_google"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_already_have_account"
                style="@style/customTextView"
                android:textColor="@color/secondaryTextColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/scroll_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/already_have_account"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
