<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/scroll_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_marginVertical="@dimen/_32sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_4sdp"
                app:cardBackgroundColor="@color/dark_grey_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_16sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_logo"
                    android:layout_width="@dimen/_70sdp"
                    android:src="@drawable/ic_logo"
                    android:layout_height="@dimen/_70sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_main_heading"
                    style="@style/TvFontSemibold"
                    android:textSize="@dimen/_16ssp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/img_logo"
                    app:layout_constraintStart_toStartOf="@id/img_logo"
                    app:layout_constraintEnd_toEndOf="@id/img_logo"
                    android:text="@string/reset_your_password"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sub_heading"
                    style="@style/customTextView"
                    android:layout_marginHorizontal="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_heading"
                    app:layout_constraintStart_toStartOf="@id/tv_main_heading"
                    app:layout_constraintEnd_toEndOf="@id/tv_main_heading"
                    android:text="@string/create_new_password"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_new_password"
                    style="@style/TvFontSemibold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/blue_grey_light"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sub_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/new_password"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/Widget.MyApp.TextInputLayout"
                        android:text="@string/new_password"
                        app:errorEnabled="true"
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_new_password"
                        app:layout_constraintTop_toBottomOf="@+id/tv_new_password"
                        app:passwordToggleDrawable="@drawable/password_selector"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/CommonEditTextStyle"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="20" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_confirm_password"
                    style="@style/TvFontSemibold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/blue_grey_light"
                    app:layout_constraintTop_toBottomOf="@+id/password_layout"
                    app:layout_constraintStart_toStartOf="@id/password_layout"
                    android:text="@string/confirm_password"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/Widget.MyApp.TextInputLayout"
                        android:text="@string/new_password"
                        app:errorEnabled="true"
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_confirm_password"
                        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
                        app:passwordToggleDrawable="@drawable/password_selector"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_confirm_password"
                            style="@style/CommonEditTextStyle"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:maxLength="20" />

                    </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_btn_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/common_btn_bg"
                    app:layout_constraintEnd_toEndOf="@+id/confirm_password_layout"
                    app:layout_constraintStart_toStartOf="@+id/confirm_password_layout"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_submit"
                        style="@style/buttonWithArrow"
                        android:text="@string/submit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
